--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-hello
+<!DOCTYPE html>
+
+<html>
+    <title> spaceraiders.github.io </title>
+
+    <body>
+        <p>
+            This is the root node for this small website! Take a look around if you would like. =) </br>
+            It is not pretty, but it should do for now.
+
+            <ul>
+                <li> <a href="structure/introduction.html"> About me </a> </li>
+                <li> <a href="structure/portfolio.html"> My portfolio </a> </li>
+            </ul>
+        </p>
+    </body>
+</html>
