Added programming section.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <ul>
                 <li> <a href="structure/introduction.html"> About me </a> </li>
                 <li> <a href="structure/portfolio.html"> My portfolio </a> </li>
+                <li> <a href="structure/programming/entry.html"> Programming ramblings </a> </li>
             </ul>
         </p>
     </body>
